crates/resource/tests/probes/derive_invalid_topology.stderr
error: invalid `topology = "wat"` — must be one of: pool, resident
 --> tests/probes/derive_invalid_topology.rs:7:8
  |
7 | struct BadTopology;
  |        ^^^^^^^^^^^
